Fix up a bit on mobile

--- a/client/css/global.css
+++ b/client/css/global.css
@@ -48,6 +48,39 @@ body, html {
 
 /* TEXT */
 
+@media (max-width: 992px) {
+  h1 {
+    font-size: 20px;
+  }
+  h2 {
+    font-size: 15px;
+  }
+
+  h4 {
+    font-size: 10px;
+  }
+
+  .form-control {
+    font-size: 10px;
+  }
+
+  label {
+    font-size: 10px;
+    font-weight: 400;
+  }
+
+  .btn-social {
+    padding-left: 0px;
+  }
+}
+
+@media (min-width: 992px) {
+  label {
+    font-size: 16px;
+    font-weight: 400;
+  }
+}
+
 .center-text {
   text-align: center;
 }
@@ -64,10 +97,7 @@ body, html {
   color: #25DC5D;
 }
 
-label {
-  font-size: 16px;
-  font-weight: 400;
-}
+
 
 /* BUTTONS */
 
