--- a/client/css/navbar.css
+++ b/client/css/navbar.css
@@ -1,4 +1,4 @@
-@media (min-width: 992px) {
+@media (max-width: 992px) {
   a.navbar-custom-brand {
     color: #DC2725!important;
     font-weight: 700;
@@ -6,11 +6,14 @@
   }
 }
 
-a.navbar-custom-brand {
-  color: #DC2725!important;
-  font-weight: 700;
-  font-size: 26px;
+@media (min-width: 992px) {
+  a.navbar-custom-brand {
+    color: #DC2725!important;
+    font-weight: 700;
+    font-size: 26px;
+  }
 }
+
 
 .nav li {
   font-weight: 400;
